--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     },
     "exports": {
       "importConditionDefaultExport": "default"
+    },
+    "___experimentalFlags_WILL_CHANGE_IN_PATCH": {
+      "importsConditions": true
     }
   },
   "scripts": {
@@ -53,7 +56,7 @@
     "@changesets/cli": "^2.24.4",
     "@manypkg/cli": "^0.16.1",
     "@manypkg/get-packages": "^1.1.3",
-    "@preconstruct/cli": "^2.6.2",
+    "@preconstruct/cli": "^2.6.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/vue": "^6.6.1",
     "@types/jest": "^29.2.5",
