--- a/packages/xstate-analytics/package.json
+++ b/packages/xstate-analytics/package.json
@@ -18,6 +18,10 @@
   "module": "dist/xstate-analytics.esm.js",
   "exports": {
     ".": {
+      "types": {
+        "import": "./dist/xstate-analytics.cjs.mjs",
+        "default": "./dist/xstate-analytics.cjs.js"
+      },
       "module": "./dist/xstate-analytics.esm.js",
       "import": "./dist/xstate-analytics.cjs.mjs",
       "default": "./dist/xstate-analytics.cjs.js"
