--- a/packages/xstate-solid/package.json
+++ b/packages/xstate-solid/package.json
@@ -20,11 +20,19 @@
   "module": "dist/xstate-solid.esm.js",
   "exports": {
     "./fsm": {
+      "types": {
+        "import": "./fsm/dist/xstate-solid-fsm.cjs.mjs",
+        "default": "./fsm/dist/xstate-solid-fsm.cjs.js"
+      },
       "module": "./fsm/dist/xstate-solid-fsm.esm.js",
       "import": "./fsm/dist/xstate-solid-fsm.cjs.mjs",
       "default": "./fsm/dist/xstate-solid-fsm.cjs.js"
     },
     ".": {
+      "types": {
+        "import": "./dist/xstate-solid.cjs.mjs",
+        "default": "./dist/xstate-solid.cjs.js"
+      },
       "module": "./dist/xstate-solid.esm.js",
       "import": "./dist/xstate-solid.cjs.mjs",
       "default": "./dist/xstate-solid.cjs.js"
