--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -53,6 +53,12 @@
     },
     "./package.json": "./package.json"
   },
+  "imports": {
+    "#is-development": {
+      "development": "./src/true.js",
+      "default": "./src/false.js"
+    }
+  },
   "sideEffects": false,
   "funding": {
     "type": "opencollective",
