--- a/packages/xstate-fsm/package.json
+++ b/packages/xstate-fsm/package.json
@@ -31,6 +31,12 @@
     },
     "./package.json": "./package.json"
   },
+  "imports": {
+    "#is-development": {
+      "development": "./src/true.js",
+      "default": "./src/false.js"
+    }
+  },
   "sideEffects": false,
   "files": [
     "dist"
