--- a/packages/xstate-react/package.json
+++ b/packages/xstate-react/package.json
@@ -38,6 +38,12 @@
     },
     "./package.json": "./package.json"
   },
+  "imports": {
+    "#is-development": {
+      "development": "./src/true.js",
+      "default": "./src/false.js"
+    }
+  },
   "types": "dist/xstate-react.cjs.d.ts",
   "sideEffects": false,
   "files": [
