Fixed package.json files

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -11,6 +11,11 @@
         "import": "./dist/xstate.cjs.mjs",
         "default": "./dist/xstate.cjs.js"
       },
+      "development": {
+        "module": "./dist/xstate.development.esm.js",
+        "import": "./dist/xstate.development.cjs.mjs",
+        "default": "./dist/xstate.development.cjs.js"
+      },
       "module": "./dist/xstate.esm.js",
       "import": "./dist/xstate.cjs.mjs",
       "default": "./dist/xstate.cjs.js"
@@ -19,6 +24,11 @@
       "types": {
         "import": "./guards/dist/xstate-guards.cjs.mjs",
         "default": "./guards/dist/xstate-guards.cjs.js"
+      },
+      "development": {
+        "module": "./guards/dist/xstate-guards.development.esm.js",
+        "import": "./guards/dist/xstate-guards.development.cjs.mjs",
+        "default": "./guards/dist/xstate-guards.development.cjs.js"
       },
       "module": "./guards/dist/xstate-guards.esm.js",
       "import": "./guards/dist/xstate-guards.cjs.mjs",
@@ -29,6 +39,11 @@
         "import": "./actions/dist/xstate-actions.cjs.mjs",
         "default": "./actions/dist/xstate-actions.cjs.js"
       },
+      "development": {
+        "module": "./actions/dist/xstate-actions.development.esm.js",
+        "import": "./actions/dist/xstate-actions.development.cjs.mjs",
+        "default": "./actions/dist/xstate-actions.development.cjs.js"
+      },
       "module": "./actions/dist/xstate-actions.esm.js",
       "import": "./actions/dist/xstate-actions.cjs.mjs",
       "default": "./actions/dist/xstate-actions.cjs.js"
@@ -37,6 +52,11 @@
       "types": {
         "import": "./dev/dist/xstate-dev.cjs.mjs",
         "default": "./dev/dist/xstate-dev.cjs.js"
+      },
+      "development": {
+        "module": "./dev/dist/xstate-dev.development.esm.js",
+        "import": "./dev/dist/xstate-dev.development.cjs.mjs",
+        "default": "./dev/dist/xstate-dev.development.cjs.js"
       },
       "module": "./dev/dist/xstate-dev.esm.js",
       "import": "./dev/dist/xstate-dev.cjs.mjs",
@@ -47,6 +67,11 @@
         "import": "./actors/dist/xstate-actors.cjs.mjs",
         "default": "./actors/dist/xstate-actors.cjs.js"
       },
+      "development": {
+        "module": "./actors/dist/xstate-actors.development.esm.js",
+        "import": "./actors/dist/xstate-actors.development.cjs.mjs",
+        "default": "./actors/dist/xstate-actors.development.cjs.js"
+      },
       "module": "./actors/dist/xstate-actors.esm.js",
       "import": "./actors/dist/xstate-actors.cjs.mjs",
       "default": "./actors/dist/xstate-actors.cjs.js"
@@ -55,8 +80,8 @@
   },
   "imports": {
     "#is-development": {
-      "development": "./src/true.js",
-      "default": "./src/false.js"
+      "development": "./src/true.ts",
+      "default": "./src/false.ts"
     }
   },
   "sideEffects": false,
