--- a/packages/xstate-fsm/package.json
+++ b/packages/xstate-fsm/package.json
@@ -25,6 +25,11 @@
         "import": "./dist/xstate-fsm.cjs.mjs",
         "default": "./dist/xstate-fsm.cjs.js"
       },
+      "development": {
+        "module": "./dist/xstate-fsm.development.esm.js",
+        "import": "./dist/xstate-fsm.development.cjs.mjs",
+        "default": "./dist/xstate-fsm.development.cjs.js"
+      },
       "module": "./dist/xstate-fsm.esm.js",
       "import": "./dist/xstate-fsm.cjs.mjs",
       "default": "./dist/xstate-fsm.cjs.js"
@@ -33,8 +38,8 @@
   },
   "imports": {
     "#is-development": {
-      "development": "./src/true.js",
-      "default": "./src/false.js"
+      "development": "./src/true.ts",
+      "default": "./src/false.ts"
     }
   },
   "sideEffects": false,
