--- a/packages/xstate-react/package.json
+++ b/packages/xstate-react/package.json
@@ -23,6 +23,11 @@
         "import": "./fsm/dist/xstate-react-fsm.cjs.mjs",
         "default": "./fsm/dist/xstate-react-fsm.cjs.js"
       },
+      "development": {
+        "module": "./fsm/dist/xstate-react-fsm.development.esm.js",
+        "import": "./fsm/dist/xstate-react-fsm.development.cjs.mjs",
+        "default": "./fsm/dist/xstate-react-fsm.development.cjs.js"
+      },
       "module": "./fsm/dist/xstate-react-fsm.esm.js",
       "import": "./fsm/dist/xstate-react-fsm.cjs.mjs",
       "default": "./fsm/dist/xstate-react-fsm.cjs.js"
@@ -32,6 +37,11 @@
         "import": "./dist/xstate-react.cjs.mjs",
         "default": "./dist/xstate-react.cjs.js"
       },
+      "development": {
+        "module": "./dist/xstate-react.development.esm.js",
+        "import": "./dist/xstate-react.development.cjs.mjs",
+        "default": "./dist/xstate-react.development.cjs.js"
+      },
       "module": "./dist/xstate-react.esm.js",
       "import": "./dist/xstate-react.cjs.mjs",
       "default": "./dist/xstate-react.cjs.js"
@@ -40,8 +50,8 @@
   },
   "imports": {
     "#is-development": {
-      "development": "./src/true.js",
-      "default": "./src/false.js"
+      "development": "./src/true.ts",
+      "default": "./src/false.ts"
     }
   },
   "types": "dist/xstate-react.cjs.d.ts",
