--- a/packages/xstate-immer/package.json
+++ b/packages/xstate-immer/package.json
@@ -37,11 +37,11 @@
   },
   "dependencies": {},
   "peerDependencies": {
-    "immer": "^9.0.6",
+    "immer": "^9.0.6 || ^10",
     "xstate": "^4.37.2"
   },
   "devDependencies": {
-    "immer": "^9.0.6",
+    "immer": "^10.0.2",
     "lerna-alias": "3.0.3-0",
     "typescript": "^4.8.4",
     "xstate": "*"
