--- a/examples/template-svelte-js/package.json
+++ b/examples/template-svelte-js/package.json
@@ -7,12 +7,12 @@
     "serve": "vite preview"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.49",
-    "svelte": "^3.48.0",
-    "vite": "^2.9.13"
+    "@sveltejs/vite-plugin-svelte": "^1.4.0",
+    "svelte": "^3.59.1",
+    "vite": "^2.9.15"
   },
   "dependencies": {
     "@xstate/svelte": "^0.1.1",
-    "xstate": "^4.32.1"
+    "xstate": "^4.37.2"
   }
 }
