--- a/examples/template-svelte-ts/package.json
+++ b/examples/template-svelte-ts/package.json
@@ -8,17 +8,17 @@
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.49",
+    "@sveltejs/vite-plugin-svelte": "^1.4.0",
     "@tsconfig/svelte": "^2.0.1",
-    "svelte": "^3.48.0",
-    "svelte-check": "^2.8.0",
+    "svelte": "^3.59.1",
+    "svelte-check": "^2.10.3",
     "svelte-preprocess": "^4.10.7",
-    "tslib": "^2.4.0",
-    "typescript": "^4.7.4",
-    "vite": "^2.9.13"
+    "tslib": "^2.5.2",
+    "typescript": "^4.9.5",
+    "vite": "^2.9.15"
   },
   "dependencies": {
     "@xstate/svelte": "^0.1.1",
-    "xstate": "^4.32.1"
+    "xstate": "^4.37.2"
   }
 }
