--- a/examples/todo-mvc-svelte/package.json
+++ b/examples/todo-mvc-svelte/package.json
@@ -8,21 +8,21 @@
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.49",
+    "@sveltejs/vite-plugin-svelte": "^1.4.0",
     "@tsconfig/svelte": "^2.0.1",
-    "svelte": "^3.48.0",
-    "svelte-check": "^2.8.0",
+    "svelte": "^3.59.1",
+    "svelte-check": "^2.10.3",
     "svelte-preprocess": "^4.10.7",
-    "tslib": "^2.4.0",
-    "typescript": "^4.7.4",
-    "vite": "^2.9.13"
+    "tslib": "^2.5.2",
+    "typescript": "^4.9.5",
+    "vite": "^2.9.15"
   },
   "dependencies": {
     "@xstate/inspect": "^0.4.1",
     "@xstate/svelte": "^0.1.1",
-    "nanoid": "^3.3.4",
+    "nanoid": "^3.3.6",
     "todomvc-app-css": "^2.4.2",
     "todomvc-common": "^1.0.5",
-    "xstate": "^4.32.1"
+    "xstate": "^4.37.2"
   }
 }
