--- a/examples/todomvc-react/package.json
+++ b/examples/todomvc-react/package.json
@@ -8,17 +8,17 @@
   "dependencies": {
     "@xstate/react": "4.0.0-beta.4",
     "classnames": "^2.3.2",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "todomvc-app-css": "^2.4.2",
     "todomvc-common": "^1.0.5",
-    "xstate": "5.0.0-beta.10"
+    "xstate": "5.0.0-beta.13"
   },
   "devDependencies": {
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "typescript": "^4.1.2",
-    "vite": "^1.0.0-rc.13",
-    "vite-plugin-react": "^4.0.0"
+    "@types/react": "^17.0.59",
+    "@types/react-dom": "^17.0.20",
+    "typescript": "^4.9.5",
+    "vite": "1.0.0-rc.13",
+    "vite-plugin-react": "^4.0.1"
   }
 }
