--- a/examples/fetch/package.json
+++ b/examples/fetch/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "parcel-bundler": "^1.12.5",
-    "typescript": "^4.7.4",
-    "xstate": "^4.32.1"
+    "typescript": "^4.9.5",
+    "xstate": "5.0.0-beta.13"
   }
 }
