Add a second launch script for debugging tests (#4024)
Co-authored-by: David Khourshid <davidkpiano@gmail.com>

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,6 +13,25 @@
       "windows": {
         "program": "${workspaceFolder}/node_modules/jest/bin/jest"
       }
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Jest Current File (no timeout)",
+      "program": "${workspaceFolder}/node_modules/.bin/jest",
+      "args": [
+        "${file}",
+        "--config",
+        "jest.config.js",
+        "--no-cache",
+        "--testTimeout=2147483647"
+      ],
+      "console": "integratedTerminal",
+      "internalConsoleOptions": "neverOpen",
+      "disableOptimisticBPs": true,
+      "windows": {
+        "program": "${workspaceFolder}/node_modules/jest/bin/jest"
+      }
     }
   ]
 }
