--- a/examples/react-tic-tac-toe/package.json
+++ b/examples/react-tic-tac-toe/package.json
@@ -6,10 +6,10 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "@xstate/react": "^1.6.3",
+    "@xstate/react": "4.0.0-beta.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "xstate": "^4.37.2"
+    "xstate": "5.0.0-beta.13"
   },
   "devDependencies": {
     "@types/react": "^17.0.59",
