--- a/packages/xstate-fsm/tsconfig.json
+++ b/packages/xstate-fsm/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../../tsconfig.base.json",
   "include": ["src/**/*"],
   "compilerOptions": {
+    "strictFunctionTypes": true,
     "target": "es6",
     "outDir": "./lib",
     "rootDir": "./src"
