--- a/packages/xstate-svelte/package.json
+++ b/packages/xstate-svelte/package.json
@@ -46,7 +46,7 @@
   },
   "peerDependencies": {
     "@xstate/fsm": "^2.1.0",
-    "svelte": "^3.24.1",
+    "svelte": "3.24.1 - 4",
     "xstate": "^4.38.0"
   },
   "peerDependenciesMeta": {
