--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,11 +1,7 @@
 name: Node CI
-
-on:
-  push:
-    branches:
       - main
       - next
-  pull_request:
+  pull_request/push:
     branches:
       - '**'
 
