Ignore `@xstate/graph` in the Changesets config again

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -7,6 +7,7 @@
   "baseBranch": "main",
   "ignore": [
     "@xstate/analytics",
+    "@xstate/graph",
     "@xstate/immer",
     "@xstate/inspect",
     "@xstate/solid",
