--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "esnext",
     "isolatedModules": true,
     "moduleResolution": "node16",
+    "module": "node16",
     "allowImportingTsExtensions": true,
     "noEmit": true,
     "skipLibCheck": true,
