--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
     "resolveJsonModule": true,
     "jsx": "react-jsx",
     "lib": ["es2019", "dom"],
-    "strict": true
+    "strict": true,
+    "stripInternal": true
   },
   "exclude": ["examples", "templates"]
 }
