--- a/templates/react-ts/package.json
+++ b/templates/react-ts/package.json
@@ -9,16 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@xstate/react": "^4.0.0-beta.3",
+    "@xstate/react": "4.0.0-beta.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "xstate": "^5.0.0-beta.8"
+    "xstate": "5.0.0-beta.29"
   },
   "devDependencies": {
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^3.1.0",
-    "typescript": "^4.9.3",
-    "vite": "^4.1.0"
+    "typescript": "^4.9.5",
+    "vite": "^4.4.9"
   }
 }
