--- a/templates/vanilla-ts/package.json
+++ b/templates/vanilla-ts/package.json
@@ -9,10 +9,10 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "typescript": "^4.9.3",
-    "vite": "^4.1.0"
+    "typescript": "^4.9.5",
+    "vite": "^4.4.9"
   },
   "dependencies": {
-    "xstate": "^5.0.0-beta.8"
+    "xstate": "5.0.0-beta.29"
   }
 }
