--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "spawn-command": "0.0.2-1",
     "tslib": "^2.3.1",
     "tslint": "^5.11.0",
-    "typescript": "^5.2.2",
+    "typescript": "5.3.0-dev.20230920",
     "vue": "^3.0.11",
     "webpack-dev-middleware": "^3.6.0"
   },
