--- a/examples/workflow-applicant-request/package.json
+++ b/examples/workflow-applicant-request/package.json
@@ -14,6 +14,7 @@
     "vite-node": "^0.31.4"
   },
   "dependencies": {
-    "xstate": "5.0.0-beta.13"
+    "ts-node": "^10.9.1",
+    "xstate": "^5.0.0-beta.31"
   }
 }
