--- a/examples/mongodb-persisted-state/package.json
+++ b/examples/mongodb-persisted-state/package.json
@@ -10,12 +10,12 @@
   },
   "devDependencies": {
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.2",
-    "vite": "^4.3.9",
+    "typescript": "^5.2.2",
+    "vite": "^4.5.0",
     "vite-node": "^0.31.4"
   },
   "dependencies": {
-    "mongodb": "^6.1.0",
-    "xstate": "^5.0.0-beta.30"
+    "mongodb": "^6.2.0",
+    "xstate": "5.0.0-beta.40"
   }
 }
