--- a/examples/snake-react/package.json
+++ b/examples/snake-react/package.json
@@ -10,10 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@xstate/react": "4.0.0-beta.8",
+    "@xstate/react": "beta",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "xstate": "5.0.0-beta.26"
+    "xstate": "beta"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
