--- a/examples/friends-list-react/package.json
+++ b/examples/friends-list-react/package.json
@@ -7,10 +7,10 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "@xstate/react": "4.0.0-beta.3",
+    "@xstate/react": "beta",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "xstate": "5.0.0-beta.13"
+    "xstate": "beta"
   },
   "devDependencies": {
     "@types/react": "^17.0.59",
