--- a/examples/persisted-donut-maker/package.json
+++ b/examples/persisted-donut-maker/package.json
@@ -9,11 +9,11 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "typescript": "^5.0.2",
-    "vite": "^4.3.9",
+    "typescript": "^5.2.2",
+    "vite": "^4.5.0",
     "vite-node": "^0.31.4"
   },
   "dependencies": {
-    "xstate": "5.0.0-beta.13"
+    "xstate": "beta"
   }
 }
