--- a/examples/tic-tac-toe-react/package.json
+++ b/examples/tic-tac-toe-react/package.json
@@ -6,15 +6,15 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "@xstate/react": "4.0.0-beta.5",
+    "@xstate/react": "beta",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "xstate": "5.0.0-beta.13"
+    "xstate": "beta"
   },
   "devDependencies": {
-    "@types/react": "^17.0.59",
-    "@types/react-dom": "^17.0.20",
+    "@types/react": "^17.0.70",
+    "@types/react-dom": "^17.0.23",
     "typescript": "^4.9.5",
-    "vite": "^2.9.15"
+    "vite": "^2.9.16"
   }
 }
