--- a/examples/tiles/package.json
+++ b/examples/tiles/package.json
@@ -9,10 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@xstate/react": "4.0.0-beta.5",
+    "@xstate/react": "beta",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "xstate": "5.0.0-beta.13"
+    "xstate": "beta"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
