--- a/examples/timer/package.json
+++ b/examples/timer/package.json
@@ -9,16 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@xstate/react": "4.0.0-beta.5",
+    "@xstate/react": "beta",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "xstate": "5.0.0-beta.13"
+    "xstate": "beta"
   },
   "devDependencies": {
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^3.1.0",
-    "typescript": "^4.9.3",
-    "vite": "^4.2.0"
+    "typescript": "^4.9.5",
+    "vite": "^4.5.0"
   }
 }
