--- a/examples/todomvc-react/package.json
+++ b/examples/todomvc-react/package.json
@@ -6,13 +6,13 @@
     "build": "tsc && vite build"
   },
   "dependencies": {
-    "@xstate/react": "4.0.0-beta.4",
+    "@xstate/react": "beta",
     "classnames": "^2.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "todomvc-app-css": "^2.4.2",
     "todomvc-common": "^1.0.5",
-    "xstate": "5.0.0-beta.13"
+    "xstate": "beta"
   },
   "devDependencies": {
     "@types/react": "^17.0.59",
