--- a/examples/workflow-car-vitals/package.json
+++ b/examples/workflow-car-vitals/package.json
@@ -9,12 +9,12 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "typescript": "^5.0.2",
-    "vite": "^4.3.9",
+    "typescript": "^5.2.2",
+    "vite": "^4.5.0",
     "vite-node": "^0.31.4"
   },
   "dependencies": {
     "cockatiel": "^3.1.1",
-    "xstate": "5.0.0-beta.13"
+    "xstate": "beta"
   }
 }
