--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "patch-package": "^6.5.1",
     "prettier": "^3.1.0",
     "spawn-command": "0.0.2-1",
+    "synckit": "^0.8.5",
     "tslib": "^2.3.1",
     "tslint": "^5.11.0",
     "typescript": "^5.2.2",
