--- a/examples/snake-react/package.json
+++ b/examples/snake-react/package.json
@@ -13,7 +13,7 @@
     "@xstate/react": "beta",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "xstate": "beta"
+    "xstate": "^5.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
