--- a/examples/7guis-temperature-react/package.json
+++ b/examples/7guis-temperature-react/package.json
@@ -9,7 +9,7 @@
     "@xstate/react": "beta",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "xstate": "beta"
+    "xstate": "^5.0.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.59",
