--- a/examples/express-workflow/package.json
+++ b/examples/express-workflow/package.json
@@ -14,7 +14,7 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "ts-node": "^10.9.1",
-    "xstate": "beta"
+    "xstate": "^5.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
