--- a/examples/tiles/package.json
+++ b/examples/tiles/package.json
@@ -12,7 +12,7 @@
     "@xstate/react": "beta",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "xstate": "beta"
+    "xstate": "^5.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
