--- a/examples/todomvc-react/package.json
+++ b/examples/todomvc-react/package.json
@@ -12,7 +12,7 @@
     "react-dom": "^17.0.2",
     "todomvc-app-css": "^2.4.2",
     "todomvc-common": "^1.0.5",
-    "xstate": "beta"
+    "xstate": "^5.0.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.59",
