--- a/templates/react-ts/package.json
+++ b/templates/react-ts/package.json
@@ -9,10 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@xstate/react": "4.0.0-beta.11",
+    "@xstate/react": "4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "xstate": "5.0.0-beta.53"
+    "xstate": "5.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.39",
