Re-ignore `@xstate/solid` in the Changesets config

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -9,6 +9,7 @@
     "@xstate/immer",
     "@xstate/graph",
     "@xstate/inspect",
+    "@xstate/solid",
     "@xstate/test"
   ],
   "___experimentalUnsafeOptions_WILL_CHANGE_IN_PATCH": {
