--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     }
   },
   "scripts": {
+    "prepare": "husky install",
     "preinstall": "node ./scripts/ensure-yarn.js",
     "postinstall": "patch-package && manypkg check && preconstruct dev",
     "build": "preconstruct build",
@@ -66,13 +67,13 @@
     "babel-jest": "^29.7.0",
     "babel-preset-solid": "^1.8.4",
     "gh-pages": "^2.0.1",
-    "husky": "^3.1.0",
+    "husky": "^8.0.3",
     "jest": "^29.7.0",
     "jest-config": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-regex-util": "^29.6.3",
     "jest-watch-typeahead": "^2.2.2",
-    "lint-staged": "^8.2.1",
+    "lint-staged": "^15.2.0",
     "markdown-it-codesandbox-embed": "^0.1.0",
     "patch-package": "^6.5.1",
     "prettier": "^3.1.0",
@@ -87,15 +88,9 @@
   "resolutions": {
     "**/tslib": "^2.3.1"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
   "lint-staged": {
     "*.{ts,tsx,js,jsx,json,md,mdx}": [
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ]
   }
 }
