angular compiler `npm link` monorepo fix

--- a/examples/toggle-angular/tsconfig.json
+++ b/examples/toggle-angular/tsconfig.json
@@ -19,7 +19,10 @@
     "target": "ES2022",
     "module": "ES2022",
     "useDefineForClassFields": false,
-    "lib": ["ES2022", "dom"]
+    "lib": ["ES2022", "dom"],
+    "paths": {
+      "@xstate/angular": ["../../packages/xstate-angular"]
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
