--- a/packages/xstate-angular/package.json
+++ b/packages/xstate-angular/package.json
@@ -76,6 +76,6 @@
     "@angular/core": "^17.0.0",
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
-    "xstate": "5.3.0"
+    "xstate": "^5.3.0"
   }
 }
