Swap changeset directories

--- a/.changeset-stable-release/config.json
+++ b/.changeset-stable-release/config.json
@@ -5,7 +5,13 @@
   "linked": [],
   "access": "public",
   "baseBranch": "main",
-  "ignore": ["@xstate/immer", "@xstate/inspect", "@xstate/solid"],
+  "ignore": [
+    "@xstate/immer",
+    "@xstate/graph",
+    "@xstate/inspect",
+    "@xstate/solid",
+    "@xstate/test"
+  ],
   "___experimentalUnsafeOptions_WILL_CHANGE_IN_PATCH": {
     "onlyUpdatePeerDependentsWhenOutOfRange": true,
     "useCalculatedVersionForSnapshots": true
