--- a/templates/svelte-ts/package.json
+++ b/templates/svelte-ts/package.json
@@ -19,6 +19,7 @@
     "vite": "^5.0.11"
   },
   "dependencies": {
+    "@statelyai/inspect": "^0.2.0",
     "@xstate/svelte": "^3.0.2",
     "xstate": "^5.4.1"
   }
