tweak setup in attempt to forbid using unknown implementations

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
     "jsx": "react-jsx",
     "lib": ["es2019", "dom"],
     "strict": true,
-    "stripInternal": true
+    "stripInternal": true,
+    "noErrorTruncation": true
   },
   "exclude": ["examples", "templates"]
 }
