--- a/packages/xstate-store/package.json
+++ b/packages/xstate-store/package.json
@@ -51,7 +51,8 @@
   "devDependencies": {
     "@testing-library/react": "^14.2.1",
     "immer": "^10.0.2",
-    "react": "^18.0.0"
+    "react": "^18.0.0",
+    "xstate": "^5.9.1"
   },
   "peerDependencies": {
     "react": "^18.2.0"
