Add tests for @xstate/angular

--- a/packages/xstate-angular/package.json
+++ b/packages/xstate-angular/package.json
@@ -61,10 +61,17 @@
     }
   },
   "devDependencies": {
+    "@angular/common": "^17.0.0",
+    "@angular/compiler": "^17.0.0",
+    "@angular/compiler-cli": "^17.0.0",
     "@angular/core": "^17.0.0",
-    "@testing-library/angular": "15.2.0",
-    "@testing-library/jest-dom": "^6.1.4",
+    "@angular/platform-browser": "^17.0.0",
+    "@angular/platform-browser-dynamic": "^17.0.0",
     "ng-packagr": "^17.0.0",
-    "xstate": "5.9.1"
+    "rxjs": "7.8.1",
+    "tslib": "2.6.2",
+    "typescript": "^5.4.2",
+    "xstate": "5.9.1",
+    "zone.js": "0.14.4"
   }
 }
