--- a/examples/7guis-flight-booker-react/tsconfig.json
+++ b/examples/7guis-flight-booker-react/tsconfig.json
@@ -2,9 +2,15 @@
   "compilerOptions": {
     "target": "ES2020",
     "useDefineForClassFields": true,
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "lib": ["ES2022", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+
+    "baseUrl": ".",
+    "paths": {
+      "*": ["./*.d.ts"],
+      "@/*": ["./src/*", "./dist/*", ""]
+    },
 
     /* Bundler mode */
     "moduleResolution": "bundler",
@@ -20,6 +26,5 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
