Fix itinerary showing return date on one way flight

--- a/examples/7guis-flight-booker-react/tsconfig.json
+++ b/examples/7guis-flight-booker-react/tsconfig.json
@@ -5,6 +5,7 @@
     "lib": ["ES2022", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "types": ["jest", "@testing-library/jest-dom"],
 
     "baseUrl": ".",
     "paths": {
