--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     }
   },
   "scripts": {
-    "preinstall": "node ./scripts/ensure-yarn.js",
-    "postinstall": "patch-package && manypkg check && preconstruct dev",
+    "preinstall": "node ./scripts/ensure-pnpm.js",
+    "postinstall": "manypkg check && preconstruct dev",
     "build": "preconstruct build",
     "fix": "manypkg fix",
     "typecheck": "tsc",
@@ -54,7 +54,7 @@
     "@babel/preset-typescript": "^7.23.3",
     "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.26.2",
-    "@manypkg/cli": "^0.16.1",
+    "@manypkg/cli": "^0.21.4",
     "@manypkg/get-packages": "^1.1.3",
     "@preconstruct/cli": "^2.8.1",
     "@testing-library/jest-dom": "^6.1.4",
@@ -74,7 +74,6 @@
     "jest-watch-typeahead": "^2.2.2",
     "lint-staged": "^8.2.1",
     "markdown-it-codesandbox-embed": "^0.1.0",
-    "patch-package": "^6.5.1",
     "prettier": "^3.1.0",
     "prettier-plugin-jsdoc": "^1.3.0",
     "spawn-command": "0.0.2-1",
@@ -84,9 +83,6 @@
     "typescript": "^5.4.2",
     "vue": "^3.0.11",
     "webpack-dev-middleware": "^3.6.0"
-  },
-  "resolutions": {
-    "**/tslib": "^2.3.1"
   },
   "husky": {
     "hooks": {
@@ -98,5 +94,13 @@
       "prettier --write",
       "git add"
     ]
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "@vue/test-utils@2.4.6": "patches/@vue__test-utils@2.4.6.patch",
+      "jest-snapshot@29.7.0": "patches/jest-snapshot@29.7.0.patch",
+      "solid-js@1.8.18": "patches/solid-js@1.8.18.patch",
+      "solid-testing-library@0.3.0": "patches/solid-testing-library@0.3.0.patch"
+    }
   }
 }
