--- a/packages/xstate-react/package.json
+++ b/packages/xstate-react/package.json
@@ -76,6 +76,6 @@
     "jsdom-global": "^3.0.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "xstate": "5.15.0"
+    "xstate": "workspace:^"
   }
 }
