--- a/packages/xstate-svelte/package.json
+++ b/packages/xstate-svelte/package.json
@@ -60,6 +60,6 @@
     "svelte-check": "^3.2.0",
     "svelte-jester": "^2.3.2",
     "svelte-preprocess": "^5.0.0",
-    "xstate": "5.15.0"
+    "xstate": "workspace:^"
   }
 }
