--- a/packages/xstate-vue/package.json
+++ b/packages/xstate-vue/package.json
@@ -66,6 +66,6 @@
     "@testing-library/vue": "^6.6.1",
     "@vue/compiler-sfc": "^3.0.11",
     "vue": "^3.0.11",
-    "xstate": "5.15.0"
+    "xstate": "workspace:^"
   }
 }
