use pnpm in github actions

--- a/.github/actions/ci-setup/action.yml
+++ b/.github/actions/ci-setup/action.yml
@@ -6,7 +6,13 @@ runs:
       uses: actions/setup-node@v3
       with:
         node-version: 20.x
+        cache: 'pnpm'
+
+    - name: Install pnpm
+      uses: pnpm/action-setup@v4
+      with:
+        version: 9
 
     - name: Install Dependencies
-      run: yarn
+      run: pnpm install
       shell: bash
