--- a/packages/xstate-react/package.json
+++ b/packages/xstate-react/package.json
@@ -72,10 +72,12 @@
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
     "@types/use-sync-external-store": "^0.0.3",
+    "@xstate-repo/jest-utils": "workspace:^",
     "jsdom": "^14.0.0",
     "jsdom-global": "^3.0.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "rxjs": "^7.8.1",
     "xstate": "workspace:^"
   }
 }
