--- a/.knip.jsonc
+++ b/.knip.jsonc
@@ -1,22 +1,27 @@
 {
   "$schema": "https://unpkg.com/knip@5/schema.json",
+  "workspaces": {
+    ".": {
+      "entry": ["scripts/*.js"],
+      "project": ["scripts/*.js"]
+    }
+  },
   "ignore": [
-    "**/dist/*",
-    "docs/**/*",
     // used for `#is-development` conditional import
     "packages/**/{true,false}.ts",
     // file acts as a type test
-    "packages/xstate-svelte/test/interpreterAsReadable.svelte",
-    "scripts/{typecheck-examples,update-example-*}.js"
+    "packages/xstate-svelte/test/interpreterAsReadable.svelte"
   ],
+  "ignoreBinaries": ["svelte-check", "docs:build"],
   "ignoreDependencies": [
+    // used by packages/xstate-svelte/test
     "@tsconfig/svelte",
     "@xstate-repo/jest-utils",
     "@xstate-repo/jest-utils/setup",
-    "babel-preset-solid",
-    "husky",
-    "lint-staged",
-    "svelte-jester",
-    "synckit"
+    "synckit",
+    // package.json#exports aren't added as entry points, because `dist/` is .gitignored
+    "react",
+    "xstate",
+    "@types/ws"
   ]
 }
