--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,6 +9,10 @@ on:
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
 permissions: {}
+
+env:
+  PNPM_CACHE_FOLDER: '.pnpm-store'
+
 jobs:
   release:
     permissions:
