--- a/packages/xstate-immer/package.json
+++ b/packages/xstate-immer/package.json
@@ -41,7 +41,7 @@
   "dependencies": {},
   "peerDependencies": {
     "immer": "^9.0.6 || ^10",
-    "xstate": "^5.17.0"
+    "xstate": "workspace:^"
   },
   "devDependencies": {
     "immer": "^10.0.2",
