--- a/packages/xstate-inspect/package.json
+++ b/packages/xstate-inspect/package.json
@@ -58,7 +58,7 @@
   "peerDependencies": {
     "@types/ws": "^8.0.0",
     "ws": "^8.0.0",
-    "xstate": "^5.17.0"
+    "xstate": "workspace:^"
   },
   "peerDependenciesMeta": {
     "@types/ws": {
