--- a/packages/xstate-react/package.json
+++ b/packages/xstate-react/package.json
@@ -55,7 +55,7 @@
   },
   "peerDependencies": {
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
-    "xstate": "^5.17.0"
+    "xstate": "workspace:^"
   },
   "peerDependenciesMeta": {
     "xstate": {
