--- a/packages/xstate-solid/package.json
+++ b/packages/xstate-solid/package.json
@@ -43,7 +43,7 @@
   },
   "peerDependencies": {
     "solid-js": "^1.6.0",
-    "xstate": "^5.17.0"
+    "xstate": "workspace:^"
   },
   "peerDependenciesMeta": {
     "xstate": {
